--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -955,3 +955,19 @@ nav a {
     }
     
 }
+
+@media (max-width: 768px){
+
+    .product-single-container{
+        flex-direction: column !important;
+
+    }
+    .products {
+        padding: 0 !important;
+    }
+    .product{
+        flex-basis: 88% !important;
+    }
+
+
+}
