--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+body {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
 .aboutus-content {
   display: flex;
   flex-direction: column;
@@ -103,6 +108,10 @@
   margin: 20px auto;
   border: 1px solid gray;
   padding: 20px;
+}
+
+.slider-container {
+  width: 100%;
 }
 
 .slider {
@@ -432,7 +441,7 @@
 }
 
 .product img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .discount {
@@ -585,4 +594,11 @@
 }
 .popUp .product-card .wishlist .fa-regular {
   font-size: 12px;
+}
+
+@media only screen and (max-width: 768px) {
+  .index-product-area .products .product {
+    flex-basis: 88%;
+    margin: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
