--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -6,6 +6,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+body{
+    min-width: fit-content;
+}
 
 .aboutus-content {
     display: flex;
@@ -118,7 +121,9 @@
 }
 
 
-
+.slider-container{
+    width: 100%;
+}
 .slider {
     position: relative;
     display: flex;
@@ -509,7 +514,7 @@
 }
 
 .product img {
-    max-width: 100%;
+    width: 100%;
 }
 
 
@@ -688,4 +693,11 @@
     
     }
     
+}
+
+@media only screen and  (max-width: 768px) {
+    .index-product-area .products .product{
+        flex-basis: 88%;
+        margin: auto;
+    }
 }
